kubernetes/rendered/production/services/go-backend-helm/networking.k8s.io_v1_ingress_go-backend-helm_traefik.yaml
# Source: minimal/templates/Ingress.traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  namespace: go-backend-helm
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ingress-traefik-helm.production.kubestarterkit.com
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ingress-traefik-helm.production.kubestarterkit.com
      secretName: ingress-traefik-helm-production-kubestarterkit-com-tls
  rules:
    - host: ingress-traefik-helm.production.kubestarterkit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-backend
                port:
                  number: 8080
